let z-index auto prevent social media links from overlapping contact screen

--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,6 +1,6 @@
 section.contact {
   position: fixed;
-  width: 25vw;
+  width: 30vw;
   height: 100vh;
   z-index: 10;
   /*background-color: #3d3d3d;*/
